fixed map alignment

--- a/src/style.sass
+++ b/src/style.sass
@@ -8,7 +8,7 @@ html, body
 
 .components
   margin: .15em .5em
-  padding: .2em
+  padding: .2em .3em
   text-align: center
   color: #1d1d1d
   background-color: #ebebeb
@@ -24,8 +24,8 @@ html, body
 
 #map
   flex: 1
+  margin-right: auto
+  margin-left: auto
   position: relative;
-  width: calc(100% - 2em)
-  min-height: 400px
+  width: calc(100% - 2.2em)
   cursor: pointer
-
